--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -14,6 +14,8 @@
             android:textColor="#fff"
             android:textSize="20sp"/>
         <Button
+            android:text="返回"
+            android:textSize="10sp"
             android:id="@+id/back_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
